change the index file name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ button{
 </style>
 <body>
     
-    <h1 style="text-align: center;">welcome to san-tech i     novation</h1>
+    <h1 style="text-align: center;">welcome to san-tech inovation</h1>
     
     </div>
     <img  src="nivi.png" width="800px" height="500px" style="margin: 50px;"/>
